# fastembed-js

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  bun.lockb  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig-cjs.json  tsconfig.json  vitest.config.ts
.github/workflows/: CI.yml  compliance.yml  image.yaml  release.yml
__test__/: index.spec.mjs
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: dense-model-registry.ts  fastembed.ts  index.ts  lib.rs
tests/: fastembed_allminilm.test.ts  fastembed_bgebase.test.ts  fastembed_bgebase_v15.test.ts  fastembed_bgesmall.test.ts  fastembed_bgesmall_v15.test.ts  fastembed_bgesmallzh.test.ts  fastembed_custom.test.ts  fastembed_custom_hf.test.ts  fastembed_mle5large.test.ts  fastembed_splade.test.ts  skipped_test
