[package]
edition = "2021"
name = "fastembed-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "<1.0.49"
fastembed = { git = "https://github.com/Anush008/fastembed-rs", branch = "file-f" }
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
openssl = { version = "=0.10.66", features = ["vendored"] }  # CI fails for Windows without this

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
