[package]
edition = "2021"
name = "fastembed-js"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1" }
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
openssl = { version = "=0.10.66", features = ["vendored"] }  # CI fails for Windows without this

[target.'cfg(windows)'.dependencies]
# Exclude the ort/download-binaries features for Windows. CI fails otherwise.
# We build ONNX from source and set ORT_LIB_LOCATION.
fastembed = {version = "4.1.0", features = ["online"], default-features = false}

[target.'cfg(not(windows))'.dependencies]
fastembed = {version = "4.1.0"}

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
